# jr_home

./: ._.idea  ._main.py  ._pyproject.toml  main.py  pyproject.toml
