[tool.poetry]
name = "jr-home"
version = "0.1.0"
description = ""
authors = ["Adam Beret Manczuk <beret@hipisi.org.pl>"]
readme = "README.md"
packages = [{include = "jr_home"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.4.2"
flet-django = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
